Inmob-Salesforce/force-app/main/default/objects/Modelo__c/fields/CI_Area_Const__c.field-meta.xml
<CustomField>
    <fullName>CI_Area_Const__c</fullName>
    <label>Área de Construcción</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>