Inmob-Salesforce/force-app/main/default/objects/Modelo__c/fields/CI_Caracteristicas__c.field-meta.xml
<CustomField>
    <fullName>CI_Caracteristicas__c</fullName>
    <label>Características</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>