Inmob-Salesforce/force-app/main/default/objects/Modelo__c/fields/CI_Codigo_Modelo__c.field-meta.xml
<CustomField>
    <fullName>CI_Codigo_Modelo__c</fullName>
    <externalId>true</externalId>
    <label>Código Modelo</label>
    <length>5</length>
    <type>Text</type>
</CustomField>