Inmob-Salesforce/force-app/main/default/objects/Modelo__c/fields/CI_Codigo_Proyecto__c.field-meta.xml
<CustomField>
    <fullName>CI_Codigo_Proyecto__c</fullName>
    <label>Código Proyecto</label>
    <length>5</length>
    <type>Text</type>
</CustomField>