Inmob-Salesforce/force-app/main/default/objects/Modelo__c/fields/CI_Num_plantas__c.field-meta.xml
<CustomField>
    <fullName>CI_Num_plantas__c</fullName>
    <label>Número de plantas</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>