Inmob-Salesforce/force-app/main/default/objects/Modelo__c/fields/CI_Ruta_Foto__c.field-meta.xml
<CustomField>
    <fullName>CI_Ruta_Foto__c</fullName>
    <label>Ruta Foto</label>
    <length>100</length>
    <type>Text</type>
</CustomField>