Inmob-Salesforce/force-app/main/default/objects/Modelo__c/fields/CI_Ruta_Plano_1__c.field-meta.xml
<CustomField>
    <fullName>CI_Ruta_Plano_1__c</fullName>
    <label>Ruta Plano 1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>