Inmob-Salesforce/force-app/main/default/objects/Modelo__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CI_Codigo_Modelo__c</columns>
    <columns>NAME</columns>
    <columns>CI_Proyecto__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CI_Proyecto__c</field>
        <operation>contains</operation>
        <value>rioja</value>
    </filters>
    <label>Todos</label>
</ListView>